@@ -1,3 +1,7 @@
+2005-11-11  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lilycall.py (get_env): set PANGO_PREFIX.
+	
 2005-11-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* lilycall.py (get_env): opps. need to copy HOME too.
